// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge Snapshot Tests > matches snapshot for default badge > default-badge 1`] = `
<div>
  <span
    class=ftx_2 _badge--information _badge--md
    data-ods=badge
    data-testid=badge
  >
    Active
  </span>
</div>
`;

exports[`Badge Snapshot Tests > matches snapshot for loading badge > loading-badge 1`] = `
<div>
  <div
    aria-hidden=true
    class=e3p2_2
    data-ods=skeleton
    data-testid=badge
  />
</div>
`;

exports[`Badge Snapshot Tests > matches snapshot for success color and large size > success-lg-badge 1`] = `
<div>
  <span
    class=ftx_2 _badge--success _badge--lg
    data-ods=badge
    data-testid=badge
  >
    Success
  </span>
</div>
`;
